started fixing modal on mobile

--- a/source/css/scss/base/_forms.scss
+++ b/source/css/scss/base/_forms.scss
@@ -403,7 +403,9 @@ textarea {
 			display: block;
       padding: $spacer $spacer*3;
 
-      &:hover {
+      &:hover,
+      &:active,
+      &:focus {
         background: $grey-light;
       }
       .custom-control-indicator {
