--- a/source/css/scss/objects/_header.scss
+++ b/source/css/scss/objects/_header.scss
@@ -316,6 +316,9 @@
 		position: relative;
 		display: block;
 		z-index: 1;
+		@include media-breakpoint-up(lg) {
+			margin-top: 2px;
+		}
 
 		&:focus {
 			border: none;
@@ -352,13 +355,13 @@
 
 	}
 
-	.navbar-toggleable-xs {
+	.navbar-toggleable-sm {
 		width: 100%;
 		position: absolute;
 		left: 0;
 		overflow: visible;
 
-		@include media-breakpoint-up(sm) {
+		@include media-breakpoint-up(md) {
 			position: relative;
 		}
 	}
@@ -396,7 +399,7 @@
 		box-shadow: none;
 	}
 
-	@include media-breakpoint-up(sm) {
+	@include media-breakpoint-up(md) {
 		box-shadow: none;
 		margin-top: 2px;
 		background: transparent;
@@ -435,7 +438,7 @@
 		width: 100%;
 		padding: 0 $spacer*2;
 
-		@include media-breakpoint-up(sm) {
+		@include media-breakpoint-up(md) {
 			width: auto;
 			margin-left: $spacer*2;
 			padding: 0;
@@ -477,7 +480,7 @@
 				color: $black;
 			}
 
-			@include media-breakpoint-up(sm) {
+			@include media-breakpoint-up(md) {
 				padding: 0;
 				padding-bottom: $spacer/2;
 				display: inline;
@@ -562,7 +565,7 @@
 			}
 		}
 
-		@include media-breakpoint-up(sm) {
+		@include media-breakpoint-up(md) {
 
 			&.a-dropdown-languages {
 				display: none
@@ -610,7 +613,7 @@
 		background: $white;
 	}
 
-	@include media-breakpoint-up(sm) {
+	@include media-breakpoint-up(md) {
 		.a-globalNav-main li a {
 			color: $white;
 		}
