--- a/source/css/scss/objects/_modal.scss
+++ b/source/css/scss/objects/_modal.scss
@@ -74,6 +74,10 @@
 
 		.a-personSwitcher {
 			color: #fff;
+			padding: 0;
+			margin-right: -3px;
+			width: 200px;
+			margin-top: 3px;
 		}
 	}
 }
